# wv

./: .gitignore  Cargo.toml  build.rs  cbindgen.toml
cpp/: wv.h
cs/: wv.g.cs
src/: core.rs  ffi.rs  infer.rs  io.rs  lib.rs  main.rs  move.rs  optic.rs  prolog.rs  replace.rs  search.rs  shape.rs  tests.rs  traverse.rs
src/ds/: fsm.rs  map.rs  mod.rs  pair.rs  set.rs  vec.rs
wvc/: wv.d  wvc.cpp  wvc.sln  wvc.vcxproj  wvc.vcxproj.filters  wvpp.h
wvcs/: WV.cs  wv.g.cs  wvcs.sln
