[package]
name = "wv"
version = "0.1.0"
edition = "2021"

[lib]
name = "wv"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
multimap = "0.10.1"
itertools = "0.14.0"

[build-dependencies]
cbindgen = "0.29.0"
csbindgen = "1.9.5"